Dependencies and API Key Setup
- install required dependencies
- created HomeScreen and required components
- API key setup for Android and iOS

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -159,6 +159,9 @@ android {
                 }
             }
         }
+        manifestPlaceholders = [
+            mapsApiKey: "AIzaSyDqQjvx-iN5bJK-lCfaGCL83G0QI3m5lsU"
+        ]
     }
 
     if (isNewArchitectureEnabled()) {
