--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,10 +1,15 @@
 require_relative '../node_modules/react-native/scripts/react_native_pods'
 require_relative '../node_modules/@react-native-community/cli-platform-ios/native_modules'
 
-platform :ios, '12.4'
+platform :ios, '14.0' #'12.4'
 install! 'cocoapods', :deterministic_uuids => false
 
 target 'GooglePlacesApp' do
+  # React Native Maps dependencies
+
+  rn_maps_path = '../node_modules/react-native-maps'
+  pod 'react-native-google-maps', :path => rn_maps_path
+  
   config = use_native_modules!
 
   # Flags change depending on the env values.
