--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/async-storage": "^1.12.1",
+    "axios": "^1.8.4",
     "react": "18.1.0",
-    "react-native": "0.70.8"
+    "react-native": "0.70.8",
+    "react-native-maps": "1.13.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
